--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
+      <form method= "POST" action="/piglatinized">
+
+        <p>Enter a sentence:<input type="text" name="user_input"></p>
+        <input type="submit" id="Submit">
+      </form>
   
   </body>
 </html>
